improvements & customization Executor#execute has been replaced with CompletableFuture#asyncX calls or there sync equivalents. To enforce the use of custom punishment managers, player resolvers and message providers, these instances are no longer passed as parameters, but called via getX. Custom instances are hence used when they get set via their associated setters. A new possibility to provide messages localized and/or customized for each user was introduced with the interface MessageProvider. The default implementation of this interface is ResourceBundleMessageProvider which registers translation sources via the adventure api. In the configuration, the default language can be set which is always used as fallback option and can also be forced to use. A LocaleProvider class is used to provide the player's locale used in provide methods with a player parameter. This instance can be changed via setLocaleProvider to change the way the player's locale is provided. Default localization resources: At the moment only a file for english exists with only two translations. Planned is a second file for german and, of course, the replacement of the hard coded messages a variable.